--- a/reflection.html
+++ b/reflection.html
@@ -1,4 +1,24 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Nova • Reflection</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script></head>
-<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Bridge step</div></div>
-<div class="card"><h1 class="h1">Which moment are you in?</h1><div class="grid cols-2"><button class="btn ghost">Starting a career</button><button class="btn ghost">Switching careers</button><button class="btn ghost">Leveling up</button><button class="btn ghost">Restarting</button></div><div class="hr"></div><a class="btn primary" href="plans.html">Next • Choose Plan</a></div></div></body></html>
+
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>NOVA · Reflection</title>
+  <link rel="stylesheet" href="assets/css/style.css"/>
+</head>
+<body>
+  <div class="wrap">
+    <h1>Reflection</h1>
+    <div class="grid">
+      <div class="card"><b>Starting Out</b><p class="small">New to the field? Capture 1–2 first steps.</p></div>
+      <div class="card"><b>Switching</b><p class="small">Pivoting from another career? Note your bridge skills.</p></div>
+      <div class="card"><b>Leveling Up</b><p class="small">Already working in it? Record next skill targets.</p></div>
+      <div class="card"><b>Restarting</b><p class="small">Returning after a break? Plan a gentle ramp.</p></div>
+    </div>
+    <div class="bar">
+      <a class="btn" href="index.html">Back to Start</a>
+    </div>
+  </div>
+</body>
+</html>
