--- a/reflection.html
+++ b/reflection.html
@@ -10,14 +10,27 @@
 <body>
   <div class="wrap">
     <h1>Reflection</h1>
+    <p class="small">Purpose grows where you plant action. Choose one box and write one step you’ll take in the next 7 days.</p>
     <div class="grid">
-      <div class="card"><b>Starting Out</b><p class="small">New to the field? Capture 1–2 first steps.</p></div>
-      <div class="card"><b>Switching</b><p class="small">Pivoting from another career? Note your bridge skills.</p></div>
-      <div class="card"><b>Leveling Up</b><p class="small">Already working in it? Record next skill targets.</p></div>
-      <div class="card"><b>Restarting</b><p class="small">Returning after a break? Plan a gentle ramp.</p></div>
+      <div class="card">
+        <h2>Starting Out</h2>
+        <p class="small">New to the field? Identify one skill to learn and one person to ask for guidance this week.</p>
+      </div>
+      <div class="card">
+        <h2>Switching</h2>
+        <p class="small">What skills from your past role transfer here? Note two bridge skills you already have.</p>
+      </div>
+      <div class="card">
+        <h2>Leveling Up</h2>
+        <p class="small">List one certification or project that would raise your ceiling in the next 60 days.</p>
+      </div>
+      <div class="card">
+        <h2>Restarting</h2>
+        <p class="small">Ease back in. Name one low-risk, high-confidence step you can take this week.</p>
+      </div>
     </div>
     <div class="bar">
-      <a class="btn" href="index.html">Back to Start</a>
+      <a class="btn" href="welcome.html">Back to Welcome</a>
     </div>
   </div>
 </body>
