--- a/categories.html
+++ b/categories.html
@@ -1,39 +1,42 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Nova • Categories</title><link rel="stylesheet" href="assets/css/style.css"/><script defer src="assets/js/state.js"></script><script defer src="assets/js/data.js"></script>
-<style>#cats .category-card{min-height:44px}</style></head>
-<body><div class="container"><div class="header"><div class="brand">Nova</div><div class="badge">Selected: <span id="count">0</span> / 2–4</div></div>
-<div class="card"><h1 class="h1">Choose categories that resonate with your life, your experiences, and the work that excites you.</h1><div class="hr"></div>
-<div id="cats" class="grid cols-4"></div><div class="hr"></div><div class="grid cols-2"><button id="next" class="btn primary">Next • Select Traits</button><button id="clear" class="btn ghost">Clear</button></div><div id="hint" class="small" style="margin-top:10px;opacity:.9"></div></div></div>
-<script>
-(function(){
-  const EMBED=[{id:"tech",label:"Technology"},{id:"health",label:"Healthcare"},{id:"edu",label:"Education"},{id:"bizfin",label:"Business & Finance"},{id:"creative",label:"Creative"},{id:"pubsvc",label:"Public Service"},{id:"science",label:"Science"},{id:"trades",label:"Trades"},{id:"hospitality",label:"Hospitality"},{id:"workers",label:"Workers & Service People"}];
-  let ids=new Set(JSON.parse(localStorage.getItem('nova.selectedCategoryIds')||'[]'));
-  let labels=new Set(JSON.parse(localStorage.getItem('nova.selectedCategories')||'[]'));
-  const countEl=document.getElementById('count'), hint=document.getElementById('hint');
-  function setCount(){ countEl.textContent=ids.size; hint.textContent = ids.size<2? 'Pick at least 2 to continue.' : (ids.size>4? 'You can start with 2–4 (you picked '+ids.size+').':'' ); }
-  function save(){ const a=[...ids], b=[...labels]; localStorage.setItem('nova.selectedCategoryIds',JSON.stringify(a)); localStorage.setItem('nova.selectedCategories',JSON.stringify(b)); if(window.NOVA&&NOVA.state){NOVA.state.selectedCategoryIds=a;NOVA.state.selectedCategories=b;NOVA.save();} }
-  function wire(){
-    document.querySelectorAll('#cats .category-card').forEach(btn=>{
-      const id=btn.dataset.id, lab=btn.textContent.trim();
-      if(ids.has(id)) btn.classList.add('active');
-      btn.onclick=()=>{ if(ids.has(id)){ ids.delete(id); labels.delete(lab); btn.classList.remove('active'); } else { ids.add(id); labels.add(lab); btn.classList.add('active'); } save(); setCount(); };
+
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>NOVA · Choose Categories</title>
+  <link rel="stylesheet" href="assets/css/style.css"/>
+</head>
+<body>
+  <div class="wrap">
+    <h1>Choose Your Categories</h1>
+    <p class="small">Why this matters: Categories <b>focus the conversation</b>. They don’t limit you—<b>they clarify the next step</b>. Pick what’s true of your interests or your everyday work (choose more than one if it fits).</p>
+    <div class="card">
+      <p class="small"><b>If you’re unsure:</b> If you’re in retail, warehousing, maintenance, clerical, or customer support, choose <b>Essential & Everyday Workers</b> so you’re fully represented.</p>
+    </div>
+    <div id="grid" class="grid" role="list"></div>
+    <div class="bar">
+      <div class="small" id="cap">0 selected</div>
+      <div>
+        <a class="btn" href="welcome.html">Back</a>
+        <button id="next" class="btn" disabled>Start: Select Traits</button>
+      </div>
+    </div>
+  </div>
+  <script type="module">
+    import { set } from './assets/js/shared.js';
+    const categories = ["Business", "Technology", "Education & Community", "Public Safety", "Healthcare", "Science & Research", "Skilled Trades", "Finance & Accounting", "Operations & Logistics", "Sales & Marketing", "Law & Government", "Arts & Media", "Essential & Everyday Workers"];
+    const grid = document.getElementById('grid');
+    const cap  = document.getElementById('cap');
+    const chosen = new Set();
+
+    function update(){ cap.textContent = `${chosen.size} selected`; document.getElementById('next').disabled = chosen.size===0; set('selectedCategories',[...chosen]); }
+    categories.forEach(cat=>{
+      const el=document.createElement('div'); el.className='pill'; el.textContent=cat;
+      el.addEventListener('click',()=>{ if(chosen.has(cat)) chosen.delete(cat); else chosen.add(cat); el.classList.toggle('selected', chosen.has(cat)); update(); });
+      grid.appendChild(el);
     });
-    document.getElementById('next').onclick=()=>{ if(ids.size<2){ setCount(); return; } save(); location.href='traits.html'; };
-    document.getElementById('clear').onclick=()=>{ ids=new Set(); labels=new Set(); document.querySelectorAll('#cats .category-card').forEach(b=> b.classList.remove('active')); save(); setCount(); };
-    setCount();
-  }
-  async function init(){
-    try{
-      const data = await loadAllData();
-      const cats = (Array.isArray(data.categories)&&data.categories.length)? data.categories : EMBED;
-      const list = cats.map(c=> typeof c==='string'? {id:c.toLowerCase().replace(/[^a-z0-9]+/g,'-'), label:c} : c );
-      const root=document.getElementById('cats'); root.innerHTML='';
-      list.forEach(c=>{ const b=document.createElement('button'); b.className='category-card btn ghost'; b.textContent=c.label; b.dataset.id=c.id; root.appendChild(b); });
-      wire();
-    }catch(e){
-      const root=document.getElementById('cats'); EMBED.forEach(c=>{ const b=document.createElement('button'); b.className='category-card btn ghost'; b.textContent=c.label; b.dataset.id=c.id; root.appendChild(b); }); wire();
-    }
-  }
-  init();
-})();
-</script></body></html>
+    document.getElementById('next').addEventListener('click',()=>location.href='traits.html');
+  </script>
+</body>
+</html>
